--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
  <body>
-  <iframe src="https://www.youtube.com/watch?v=X79qqE_-TzU"
+  <iframe src="https://www.youtube.com/embed/X79qqE_-TzU"
    width="560" height="315" frameborder="0" allowfullscreen></iframe>
  </body>
 </html>
